--- a/dev/jure.ipynb
+++ b/dev/jure.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a599e2a-1a4a-4afd-a723-ffdfabe19ad3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'skimage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mskimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m io\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skimage import io"
    ]
@@ -29,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img_path = '../'\n",
     "img = imread(img_path, plugin='pil')"
    ]
   },
@@ -57,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
