--- a/common.ipynb
+++ b/common.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9738992a-954f-425d-b6da-b700e67d0b0f",
+   "cell_type": "markdown",
+   "id": "d44dad93-1614-4c52-9839-ee7e7c9b48fd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#lsldasd"
+    "# Common notebook CORIMA"
    ]
   },
   {
