--- a/common.ipynb
+++ b/common.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "227cf358-fdbd-4a6e-8f13-5bfba4c6e9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here we can add code"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "a1e43aae-d39f-498c-8dd5-3270dbda5e54",
    "metadata": {},
