--- a/jure.ipynb
+++ b/jure.ipynb
@@ -28,6 +28,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "e6d357c0-1677-4eba-8358-26de8922dc92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from PIL.TiffTags import TAGS\n",
+    "\n",
+    "img = Image.open(img_path + 'topo_20220107_Exp2Cell8map-data-2022.01.07-16.34.34.510_processed-2022.01.10-12.38.51.tif')\n",
+    "meta_dict = {TAGS[key] : img.tag[key] for key in img.tag_v2}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "eb023e5a-0fce-4dae-a69c-91eee169e512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ImageWidth': (64,),\n",
+       " 'ImageLength': (64,),\n",
+       " 'BitsPerSample': (32,),\n",
+       " 'Compression': (1,),\n",
+       " 'PhotometricInterpretation': (1,),\n",
+       " 'ImageDescription': ('no info',),\n",
+       " 'StripOffsets': (8,),\n",
+       " 'SampleFormat': (3,),\n",
+       " 'SamplesPerPixel': (1,),\n",
+       " 'RowsPerStrip': (64,),\n",
+       " 'StripByteCounts': (16384,),\n",
+       " 'XResolution': ((4294967295, 201326),),\n",
+       " 'YResolution': ((4294967295, 201326),),\n",
+       " 'PlanarConfiguration': (1,),\n",
+       " 'ResolutionUnit': (3,),\n",
+       " 'Software': ('asd2tiff_GUI - Arin Marchesi modified by FR',),\n",
+       " 'DateTime': ('1 ms x frame       ',)}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0bbc3d45-6331-4aab-92fa-6cabdabe740f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ImageFileDirectory_v1' object has no attribute 'iterkeys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mTiffTags\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TAGS\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Image\u001b[38;5;241m.\u001b[39mopen(img_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m20220117_E2_Cell8BF.tif\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m img:\n\u001b[1;32m----> 5\u001b[0m     meta_dict \u001b[38;5;241m=\u001b[39m {TAGS[key] : img\u001b[38;5;241m.\u001b[39mtag[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[43mimg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtag\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miterkeys\u001b[49m()}\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ImageFileDirectory_v1' object has no attribute 'iterkeys'"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "from PIL.TiffTags import TAGS\n",
+    "\n",
+    "with Image.open(img_path + '20220117_E2_Cell8BF.tif') as img:\n",
+    "    meta_dict = {TAGS[key] : img.tag[key] for key in img.tag.iterkeys()}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "fbc50e4a-cebe-4364-8a1d-5964fbddf5af",
    "metadata": {},
