--- a/Enrico.ipynb
+++ b/Enrico.ipynb
@@ -61,8 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "66e464ca-87cf-4781-8f55-ecfcfd20e160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ffff85-b06a-4075-8982-c222038ce1d4",
    "metadata": {},
    "outputs": [],
    "source": []
