--- a/Enrico.ipynb
+++ b/Enrico.ipynb
@@ -79,8 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99ffff85-b06a-4075-8982-c222038ce1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5a7f24-f016-4fe2-9c78-243bf4ddb87f",
    "metadata": {},
    "outputs": [],
    "source": []
