--- a/Enrico.ipynb
+++ b/Enrico.ipynb
@@ -97,8 +97,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5a5a7f24-f016-4fe2-9c78-243bf4ddb87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68ee9398-291e-4a2d-91b7-4d7eb673b70d",
    "metadata": {},
    "outputs": [],
    "source": []
