--- a/jure.ipynb
+++ b/jure.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "98e48001-0b5e-4ba4-a139-636887ff5235",
    "metadata": {},
    "outputs": [
@@ -457,13 +457,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "54.7 ms ± 6.78 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
       "the minimum distance is:  393753.1751263994\n",
       "Tuple of arrays returned :  (array([10], dtype=int64), array([16], dtype=int64))\n"
      ]
     }
    ],
    "source": [
-    "distance = distance_two_images(var_thr_downs, im_small_np)\n",
+    "\n",
+    "%timeit distance = distance_two_images(var_thr_downs, im_small_np)\n",
     "res = position_of_min(distance)"
    ]
   },
@@ -538,6 +540,50 @@
     "plt.imshow(im_orig_downs.T, cmap='Greys_r')\n",
     "plt.scatter(res[1][0]+nonzero[1], res[0][0]+nonzero[0], alpha=0.02, c='red')\n",
     "plt.title('Overlay of small image and large image')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b564962c-2766-4bdd-a2e6-9659b4367987",
+   "metadata": {},
+   "source": [
+    "## Scipy cross-correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0dfbedd1-13a8-446e-b623-e06611ddb45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import signal\n",
+    "def max_cross_corr(im1,im2): #im1 bigger than im2\n",
+    "    C=signal.correlate(im1,im2) #compute cross correlation\n",
+    "    x=np.where(C==np.max(C))[0]-(im2.shape[0]-1)\n",
+    "    y=np.where(C==np.max(C))[1]-(im2.shape[1]-1)\n",
+    "    return x,y #return where im2 should be put in im1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "eaf544c4-db29-4b15-a449-e875a2dc2afb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.37 ms ± 101 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "x:10, y:16\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit x, y = max_cross_corr(var_thr_downs, im_small_np)\n",
+    "\n",
+    "print(f'x:{x[0]}, y:{y[0]}')"
    ]
   },
   {
